# ArbitrageStrategy

./: .gitignore  LICENSE  README.md
ArbitrageBot/: CMakeLists.txt
ArbitrageBot/configured/: CMakeLists.txt  config.hpp.in
ArbitrageBot/include/ArbitrageEngine/: ArbitrageEngine.h  OrderCommand.h  OrderManager.h  OrderProcessor.h
ArbitrageBot/include/Common/: Logger.h  Logger.tpp  LoggingException.h
ArbitrageBot/include/ExchangeAPI/: BinanceAPI.h  ExchangeFactory.h  IExchangeAPI.h  IPriceSubscriber.h  MockExchangeAPI.h  Order.h  WebSocketObserver.h  WebSocketPriceObserver.h
ArbitrageBot/include/MarketData/: IAPI.h  IMarketDataProvider.h  IPriceSubscriber.h  MarketDataCache.h  MarketDataProvider.h  PriceDisplaySubscriber.h  WebSocketPriceObserver.h
ArbitrageBot/include/Network/: Http.h  HttpClient.h  IWebSocketClient.h  MockClients.h  NetworkManager.h  WebSocketClient.h  WebSocketClientWebSocketPP.h
ArbitrageBot/include/Strategy/: Istrategy.h  TriangleArbitrageStrategy.h  TriangleArbitrageStrategyv2.h  TriangleGenerator.h  Triangular_Arbitrage.h  Triangular_Arbitrage.py  Wallet.h
ArbitrageBot/include/Utils/: ConfigLoader.h  FileHandler.h  JsonParser.h  Timer.h
ArbitrageBot/src/: CMakeLists.txt
ArbitrageBot/src/ArbitrageEngine/: CMakeLists.txt  main.cpp  main_trianglegen.cpp
ArbitrageBot/src/Common/: CMakeLists.txt  Logger.cpp
ArbitrageBot/src/ExchangeAPI/: BinanceAPI.cpp  CMakeLists.txt  main.cpp
ArbitrageBot/src/MarketData/: CMakeLists.txt  main.cpp
ArbitrageBot/src/Network/: CMakeLists.txt  CurlHttpClient.cpp  NetworkManager.cpp  WebSocketClientWebSocketPP.cpp  main.cpp
ArbitrageBot/src/Strategy/: CMakeLists.txt  main_generator.cpp  main_strat.cpp  main_wallet.cpp
ArbitrageBot/src/UserInterface/: main.cpp
ArbitrageBot/src/Utils/: CMakeLists.txt  main.cpp
ArbitrageBot/test/NetworkTests/Integration/: TestHttpClient.cpp  TestWebSocket.cpp
ArbitrageBot/test/NetworkTests/Unit/: TestHttpClient.cpp  TestNetworkManager.cpp  TestWebSocketObserver.cpp
